[gd_scene load_steps=27 format=2]

[ext_resource path="res://addons/kenney_prototypes/assets/colors/dark/materials/material_004.tres" type="Material" id=1]
[ext_resource path="res://scene/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/conveyor.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/dark/materials/material_010.tres" type="Material" id=4]
[ext_resource path="res://scene/testPackageSorter.gd" type="Script" id=5]
[ext_resource path="res://scene/spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/arch.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/dark/materials/material_002.tres" type="Material" id=8]
[ext_resource path="res://scene/boxValidation.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=10]
[ext_resource path="res://scene/ui/titlescreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://scene/objects/lifter.tscn" type="PackedScene" id=12]
[ext_resource path="res://scene/objects/colorLight.tscn" type="PackedScene" id=14]
[ext_resource path="res://scene/objects/bin.tscn" type="PackedScene" id=16]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.0908226, 0.330575, 1 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 1.15842, 0.1, 1.08959 )

[sub_resource type="CubeMesh" id=14]
size = Vector3( 2.5, 0.1, 2.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 50, 0.1, 50 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 25, 0.05, 25 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 25, 0.059, 25 )

[sub_resource type="CubeMesh" id=4]
material = ExtResource( 8 )
flip_faces = true
size = Vector3( 25, 5, 25 )

[sub_resource type="ViewportTexture" id=7]
flags = 4
viewport_path = NodePath("UItest/OQ_UI2DCanvas/Viewport")

[sub_resource type="SpatialMaterial" id=6]
resource_local_to_scene = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = SubResource( 7 )

[sub_resource type="PlaneMesh" id=8]
resource_local_to_scene = true
material = SubResource( 6 )
size = Vector2( 1, 1 )

[sub_resource type="ProceduralSky" id=10]

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 10 )
ambient_light_color = Color( 0.960784, 0.960784, 0.960784, 1 )
ambient_light_sky_contribution = 0.0
tonemap_mode = 1

[node name="TestPackageSorter" type="Spatial"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.152543 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.988993, 0.330411, 0 )
shape = SubResource( 12 )

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.980368, 0.330411, 0 )
shape = SubResource( 12 )

[node name="CollisionShape3" type="CollisionShape" parent="StaticBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.00431247, 0.330411, -0.984681 )
shape = SubResource( 12 )

[node name="CollisionShape4" type="CollisionShape" parent="StaticBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.00431256, 0.330411, 0.984681 )
shape = SubResource( 12 )

[node name="CollisionShape5" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0466813, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.093789, 0 )
mesh = SubResource( 14 )
material/0 = ExtResource( 1 )

[node name="Conveyor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.312628, 0 )

[node name="Conveyor4" parent="Conveyor" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -5.88, 1, 0 )
constant_linear_velocity = Vector3( -2, 0, 0 )

[node name="Conveyor5" parent="Conveyor" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -3.88, 1, 0 )
constant_linear_velocity = Vector3( -2, 0, 0 )

[node name="Conveyor6" parent="Conveyor" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -1.88, 1, 0 )
constant_linear_velocity = Vector3( -2, 0, 0 )

[node name="Conveyor2" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.312628, 0 )

[node name="Conveyor4" parent="Conveyor2" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -5.88, 1, 6.33815e-08 )
constant_linear_velocity = Vector3( 0, 0, 2 )

[node name="Conveyor5" parent="Conveyor2" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -3.88, 1, 6.33815e-08 )
constant_linear_velocity = Vector3( 0, 0, 2 )

[node name="Conveyor6" parent="Conveyor2" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -1.88, 1, 6.33815e-08 )
constant_linear_velocity = Vector3( 0, 0, 2 )

[node name="Conveyor3" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.312628, 0 )

[node name="Conveyor4" parent="Conveyor3" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -5.88, 1, 1.26763e-07 )
constant_linear_velocity = Vector3( 2, 0, 0 )

[node name="Conveyor5" parent="Conveyor3" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -3.88, 1, 1.26763e-07 )
constant_linear_velocity = Vector3( 2, 0, 0 )

[node name="Conveyor6" parent="Conveyor3" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -1.88, 1, 1.26763e-07 )
constant_linear_velocity = Vector3( 2, 0, 0 )

[node name="Conveyor4" type="Spatial" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, -0.312628, 0 )

[node name="Conveyor4" parent="Conveyor4" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -5.88, 1, 1.90144e-07 )

[node name="Conveyor5" parent="Conveyor4" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -3.88, 1, 1.90144e-07 )

[node name="Conveyor6" parent="Conveyor4" instance=ExtResource( 3 )]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, -1.88, 1, 1.90144e-07 )

[node name="Spawner" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.17363, 0 )
color = Color( 0.960784, 0.192157, 0.192157, 1 )

[node name="Spawner2" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -1.17363, 0 )
color = Color( 0.227451, 0.929412, 0.0823529, 1 )

[node name="Spawner3" parent="." instance=ExtResource( 6 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1.17363, 0 )
color = Color( 0.964706, 0.952941, 0.141176, 1 )

[node name="Spawner4" parent="." instance=ExtResource( 6 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, -1.17363, 0 )
color = Color( 0.101961, 0.486275, 0.980392, 1 )

[node name="Floor" type="StaticBody" parent="."]

[node name="Floor" type="MeshInstance" parent="Floor"]
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Floor/Area"]
shape = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 7.5, 0 )
light_energy = 2.849
shadow_color = Color( 0.85098, 0.85098, 0.85098, 1 )

[node name="Warehouse" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = null

[node name="Arch" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20826, -4.49376 )
color = Color( 0.960784, 0.192157, 0.192157, 1 )

[node name="Arch2" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.20826, 4.48663 )
color = Color( 0.964706, 0.952941, 0.141176, 1 )

[node name="Arch3" parent="." instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.50173, 1.20826, 7.6189e-08 )
color = Color( 0.101961, 0.486275, 0.980392, 1 )

[node name="Arch4" parent="." instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.4949, 1.20826, -7.6189e-08 )
color = Color( 0.227451, 0.929412, 0.0823529, 1 )

[node name="Validators" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.230743, 0 )

[node name="BoxValidation" parent="Validators" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, -4.5 )
color = Color( 0.960784, 0.192157, 0.192157, 1 )

[node name="BoxValidation2" parent="Validators" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 4.5 )
color = Color( 0.964706, 0.952941, 0.141176, 1 )

[node name="BoxValidation3" parent="Validators" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.5, 1.35, 1.96701e-07 )
color = Color( 0.101961, 0.486275, 0.980392, 1 )

[node name="BoxValidation4" parent="Validators" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.5, 1.35, -1.96701e-07 )
color = Color( 0.227451, 0.929412, 0.0823529, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="UItest" type="Spatial" parent="."]
transform = Transform( 0.998933, 0, 0.0461815, 0, 1, 0, -0.0461815, 0, 0.998933, 0.000999987, 1.75995, -1.04675 )

[node name="OQ_UI2DCanvas" parent="UItest" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0039237, -0.141562, 0.0848719 )
editor_live_update = true

[node name="Viewport" parent="UItest/OQ_UI2DCanvas" index="0"]
size = Vector2( 1445, 906 )

[node name="UIArea" parent="UItest/OQ_UI2DCanvas" index="1"]
transform = Transform( 1.41113, 0, 0, 0, 0.884766, 0, 0, 0, 1, 0, 0, 0 )

[node name="UIMeshInstance" parent="UItest/OQ_UI2DCanvas/UIArea" index="1"]
mesh = SubResource( 8 )

[node name="Titlescreen" parent="UItest/OQ_UI2DCanvas" instance=ExtResource( 11 )]

[node name="ColorLight" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.368, 1.35749, 1.24344 )
color = Color( 0.964706, 0.952941, 0.141176, 1 )

[node name="ColorLight2" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.355, 1.35749, 1.24344 )
color = Color( 0.964706, 0.952941, 0.141176, 1 )

[node name="ColorLight3" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.368, 1.35749, -1.23056 )
color = Color( 0.960784, 0.192157, 0.192157, 1 )

[node name="ColorLight4" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.355, 1.35749, -1.23056 )
color = Color( 0.960784, 0.192157, 0.192157, 1 )

[node name="ColorLight5" parent="." instance=ExtResource( 14 )]
transform = Transform( -4.37811e-08, 0, -1.00159, 0, 1.00159, 0, 1.00159, 0, -4.37811e-08, -1.23247, 1.35749, 0.368513 )
color = Color( 0.227451, 0.929412, 0.0823529, 1 )

[node name="ColorLight6" parent="." instance=ExtResource( 14 )]
transform = Transform( -4.37811e-08, 0, -1.00159, 0, 1.00159, 0, 1.00159, 0, -4.37811e-08, -1.23247, 1.35749, -0.355639 )
color = Color( 0.227451, 0.929412, 0.0823529, 1 )

[node name="ColorLight7" parent="." instance=ExtResource( 14 )]
transform = Transform( -4.37811e-08, 0, -1.00159, 0, 1.00159, 0, 1.00159, 0, -4.37811e-08, 1.24547, 1.35749, 0.368513 )
color = Color( 0.101961, 0.486275, 0.980392, 1 )

[node name="ColorLight8" parent="." instance=ExtResource( 14 )]
transform = Transform( -4.37811e-08, 0, -1.00159, 0, 1.00159, 0, 1.00159, 0, -4.37811e-08, 1.24547, 1.35749, -0.355639 )
color = Color( 0.101961, 0.486275, 0.980392, 1 )

[node name="bin" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.71917, 0.600123, 0.0182267 )

[node name="bin2" parent="." instance=ExtResource( 16 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -7.7991, 0.600123, 0.0182267 )

[node name="bin3" parent="." instance=ExtResource( 16 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.11695e-05, 0.600123, 7.77736 )

[node name="bin4" parent="." instance=ExtResource( 16 )]
transform = Transform( 1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 3.18475e-05, 0.600123, -7.74091 )

[node name="lifter" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.11493, 0.246342, -6.99944 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
[connection signal="body_entered" from="Floor/Area" to="." method="_on_Area_body_entered"]
[connection signal="box_state" from="Validators/BoxValidation" to="." method="_on_BoxValidation_box_state"]
[connection signal="box_state" from="Validators/BoxValidation2" to="." method="_on_BoxValidation_box_state"]
[connection signal="box_state" from="Validators/BoxValidation3" to="." method="_on_BoxValidation_box_state"]
[connection signal="box_state" from="Validators/BoxValidation4" to="." method="_on_BoxValidation_box_state"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="play" from="UItest/OQ_UI2DCanvas/Titlescreen" to="." method="_on_Titlescreen_play"]

[editable path="UItest/OQ_UI2DCanvas"]
